# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_system"
version = "0.1.0"
description = "A CLI application that creates an in memory file system."
readme = "README.md"
authors = [{ name = "Ariella Wolpin", email = "ariwolpin@gmail.com" }]

dependencies = [
    "pytest >= 8.4.2",
    "cmd2 >=2.7.0",
    "wheel"
]

[project.scripts]
file_system = "file_system_cli.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "file_system"
]